[gd_scene format=3 uid="uid://ca1l10idnpapf"]

[ext_resource type="Script" uid="uid://bpu023hmmkkdp" path="res://addons/storyquest_bootstrap/new_storyquest_dialog.gd" id="1_1ir5d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_euw8d"]
bg_color = Color(0, 0, 0, 1)

[node name="StoryQuestDialogue" type="Window" unique_id=1241427116]
oversampling_override = 1.0
title = "Create StoryQuest"
initial_position = 1
size = Vector2i(600, 400)
transient = true
exclusive = true
script = ExtResource("1_1ir5d")

[node name="Panel" type="Panel" parent="." unique_id=693475436]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_euw8d")

[node name="PanelContainer" type="MarginContainer" parent="." unique_id=1479415195]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer" unique_id=1753499528]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer" unique_id=482250441]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="LinkButton" type="LinkButton" parent="PanelContainer/VBoxContainer/MarginContainer" unique_id=1232284304]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Open guide with instructions."
uri = "https://github.com/endlessm/threadbare/discussions/599"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer" unique_id=1146920114]
layout_mode = 2
columns = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer" unique_id=2129724723]
layout_mode = 2
text = "Title:"

[node name="TitleEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/GridContainer" unique_id=530857268]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "House of the Dragon"

[node name="FolderLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer" unique_id=638259626]
layout_mode = 2
text = "Folder Name:"

[node name="FolderEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/GridContainer" unique_id=146935302]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "dragonhouse"
max_length = 20
emoji_menu_enabled = false

[node name="FullPathLabelLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer" unique_id=1324173742]
layout_mode = 2
text = "Full Path:"

[node name="FullPathLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer" unique_id=1163985931]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 1

[node name="ErrorsLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer" unique_id=855513329]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
fit_content = true

[node name="DescriptionLabel" type="Label" parent="PanelContainer/VBoxContainer" unique_id=1242171709]
layout_mode = 2
text = "Description:"

[node name="DescriptionEdit" type="TextEdit" parent="PanelContainer/VBoxContainer" unique_id=1383665589]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "This quest is about..."
wrap_mode = 1
tab_input_mode = false

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer" unique_id=110944402]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer" unique_id=1620530291]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer2" unique_id=1336755490]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "Create"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/GridContainer/TitleEdit" to="." method="_on_title_edit_text_changed"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/GridContainer/TitleEdit" to="." method="submit" unbinds=1]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/GridContainer/FolderEdit" to="." method="_on_folder_edit_text_changed"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/GridContainer/FolderEdit" to="." method="submit" unbinds=1]
[connection signal="gui_input" from="PanelContainer/VBoxContainer/DescriptionEdit" to="." method="_on_description_edit_gui_input"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer2/CreateButton" to="." method="submit"]
